# navitia

./: .clang-tidy  .codecov.yml  .dockerignore  .flake8  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  .travis.yml  CMakeCache.txt  CMakeLists.txt  CNAME  CONTRIBUTING.md  CTestTestfile.cmake  Changelog  Doxyfile  Makefile  build_images.sh  build_navitia.sh  build_package.rst  cmake_install.cmake  compile_commands.json  conf.h  config.cpp  index.html  install.rst  pyproject.toml  readme.rst  readme_release.md  release_navitia.sh  requirements_pre-commit.txt  script_release.py  sonar-project.properties  toto.xml
source/: .clang-format  CMakeLists.txt  CTestCustom.cmake  compile_commands.json  conf.h.cmake  config.cpp.cmake  config.h.cmake  navitia_version.py.cmake  readme.md  readme.rst  readme.txt  requirements_dev.txt
source/BO/: CMakeLists.txt  connectors.cpp  connectors.h  data.h  main.cpp  types.h
source/RAPTOR/: CMakeLists.txt  raptor.cpp  raptor.h  test.cpp
source/SqlServer/: CMakeLists.txt  mssql.cpp  mssql.h  tests.cpp
source/WS_commons/: CMakeLists.txt  baseworker.h  configuration.cpp  configuration.h  data_structures.cpp  data_structures.h  export.def  fcgi.h  file_utilities.h  isapi.h  readme.txt  threadpool.h  utils.cpp  utils.h  zmq.h
source/access_point/: CMakeLists.txt  access_point_api.cpp  access_point_api.h
source/autocomplete/: CMakeLists.txt  autocomplete.cpp  autocomplete.h  autocomplete_api.cpp  autocomplete_api.h  readme.txt  utils.cpp  utils.h
source/benchmark/: CMakeLists.txt  Pipfile  README.md  bench.py  benchmark_example.csv  benchmark_raptor_ws.cpp  benchmark_ws.cpp  config.py  generateur_csv.cpp
source/benchmarks/: CMakeLists.txt  boucle_simple.cpp  boucle_simple_ws.cpp  resultats.txt
source/calendar/: CMakeLists.txt  calendar.cpp  calendar.h  calendar_api.cpp  calendar_api.h
source/cities/: CMakeLists.txt  alembic.ini  cities.cpp  cities.h  requirements.txt
source/cmake_modules/: .FindFcgi.cmake.swp  CompilationFlags.cmake  DetectOS.cmake  DetectOsVersion.cmake  EnableClangTidy.cmake  FindGoogleTcmalloc.cmake  FindProtoc.cmake  FindRapidXml.cmake  FindWS_Commons.cmake  Findfcgi.cmake  FindfreeTDS.cmake  Findlog4cplus.cmake  Findlz4.cmake  GetGitRevisionDescription.cmake  LoadConfig.cmake  TestsEnv.cmake  ThirdParty.cmake  UseBoost.cmake  UsePqxx.cmake
source/compute_route/: CMakeLists.txt  main.cpp  main.h  network.cpp  network.h
source/connectors/: CMakeLists.txt  adjustit_connector.cpp  adjustit_connector.h  config.py  connector_at.ini  connector_at.py  requirements.txt  setup.py
source/debian/: postinst  preinst
source/disruption/: CMakeLists.txt  disruption.cpp  disruption.h  disruption_api.cpp  disruption_api.h  line_reports_api.cpp  line_reports_api.h  traffic_reports_api.cpp  traffic_reports_api.h
source/ed/: CMakeLists.txt  adapted.cpp  adapted.h  at_perturbation.cpp  at_perturbation.h  bdtopo_parser.cpp  bdtopo_parser.h  build_helper.cpp  build_helper.h  data.cpp  data.h  default_poi_types.h  ed2nav.cpp  ed2nav.h  ed2nav_main.cpp  ed_persistor.cpp  ed_persistor.h  ed_reader.cpp  ed_reader.h  external_parser.cpp  external_parser.h  fare2ed.cpp  fare2ed.h  fare2ed_main.cpp  fusio2ed.cpp  geopal2ed.cpp  gtfs2ed.cpp  gtfs_parser.cpp  gtfs_parser.h  main.cpp  nav2rt.cpp  osm2ed.cpp  osm2ed.h  osm2ed_main.cpp  osm2nav.cpp  poi2ed.cpp  poi_parser.cpp  readme.md  synonym2ed.cpp  types.cpp  (+1 more)
source/eitri/: Readme.md  docker_wrapper.py  ed_handler.py  eitri.py  requirements.txt
source/equipment/: CMakeLists.txt  equipment_api.cpp  equipment_api.h
source/fare/: CMakeLists.txt  fare.cpp  fare.h  fare_api.cpp  fare_api.h  fare_ws.cpp  main.cpp  readme.txt  test.cpp
source/fastlz_filter/: filter.h  main.cpp
source/first_letter/: CMakeLists.txt  first_letter.h  firstletter_api.cpp  firstletter_api.h  firstletter_ws.cpp  readme.txt  test.cpp  trie.cpp
source/frontend/: CMakeLists.txt  apis.py  apis_functions.py  conf.py  error.py  find_extrem_datetimes.py  instance_manager.py  navitia.py  protobuf_to_dict.py  renderers.py  request_pb2.py  response_pb2.py  swagger.py  universals.py  validate.py
source/gateway/: CMakeLists.txt  gateway.cpp  gateway.h  gateway.ini  stat.cpp  stat.h
source/gateway_mod/: CMakeLists.txt  context.h  gateway.cpp  gateway.h  gateway_mod.ini  interface.cpp  interface.h  navitia.cpp  navitia.h  pool.cpp  pool.h  readme.txt
source/geo_dispatcher/: CMakeLists.txt  geo_dispatcher.cpp
source/georef/: CMakeLists.txt  CMakeLists.txt~  adminref.cpp  adminref.h  astar_path_finder.cpp  astar_path_finder.h  astar_shortest_paths_with_heap.h  builder.cpp  builder.h  dijkstra_path_finder.cpp  dijkstra_path_finder.h  dijkstra_shortest_paths_with_heap.h  edge.h  fwd_georef.h  georef.cpp  georef.h  georef_types.h  path_finder.cpp  path_finder.h  pois.cpp  pois.h  projection_data.h  street_network.cpp  street_network.h  visitor.h
source/http_lib/: CMakeLists.txt  http.cpp  http.h
source/interface/: CMakeLists.txt  pb_utils.cpp  pb_utils.h  renderer.cpp  renderer.h
source/itineraires/: CMakeLists.txt  itineraires.cpp  itineraires.h  itineraires_ws.cpp  to_proto.cpp  to_proto.h
source/jormungandr/: CMakeLists.txt  Jormungandr.ini  Procfile  __init__.py  apis.py  app.py  authentification.py  cache.py  conf.py  db.py  default_settings.py  error.py  find_extrem_datetimes.py  index.py  instance.py  instance_manager.py  jormungandr.py  jormungandr.wsgi  jormungandr_exceptions.py  newrelic.ini  readme.md  requirements.txt  requirements_dev.txt  setup.py  swagger.py  universals.py  validate.py
source/kraken/: CMakeLists.txt  apply_disruption.cpp  apply_disruption.h  configuration.cpp  configuration.h  data_manager.h  fill_disruption_from_chaos.cpp  fill_disruption_from_chaos.h  fill_disruption_from_database.cpp  fill_disruption_from_database.h  kraken_zmq.cpp  kraken_zmq.h  maintenance_worker.cpp  maintenance_worker.h  make_disruption_from_chaos.cpp  make_disruption_from_chaos.h  metrics.cpp  metrics.h  minimal.cpp  readme.md  realtime.cpp  realtime.h  worker.cpp  worker.h
(+2222 files in other folders)
