FIND_PACKAGE(Boost 1.40.0 COMPONENTS thread REQUIRED)
link_directories ( ${Boost_LIBRARY_DIRS} )
include_directories (${Boost_INCLUDE_DIRS})
SET(LIBS ${Boost_LIBRARIES})

IF(FCGI)
    #FIND_PATH(FCGI_INCLUDE_DIR fcgiapp.h /usr/include/ /usr/local/include/)
    #FIND_LIBRARY(FCGI_LIBRARY NAMES fcgi)
  FIND_PACKAGE(fcgi REQUIRED)
  LIST(APPEND LIBS ${FCGI_LIBRARY})
  link_directories (${Boost_LIBRARY_DIRS} ${FCGI_LIBRARY_DIRS})
  include_directories (${Boost_INCLUDE_DIRS} ${FCGI_INCLUDE_DIRS})
ENDIF(FCGI)

IF(FCGI)
    SET(BENCH_SOURCES fcgi.h isapi.h threadpool.h data_structures.h tests/benchs.cpp)
    add_executable (benchs ${BENCH_SOURCES})
    target_link_libraries(benchs ${LIBS})
ENDIF(FCGI)

IF(WIN32 AND ISAPI)
    SET(ISAPI_SOURCES fcgi.h isapi.h threadpool.h data_structures.h examples/isapi.cpp)
    add_library (isapi MODULE ${ISAPI_SOURCES})
    #target_link_libraries(isapi ${LIBS})
ELSEIF(NOT WIN32 AND ISAPI)
    MESSAGE(FATAL_ERROR "pas d'isapi sous linux")
ENDIF(WIN32 AND ISAPI)
