FIND_PACKAGE(Boost 1.40.0 COMPONENTS system REQUIRED)
link_directories ( ${Boost_LIBRARY_DIRS} )
include_directories ( ${Boost_INCLUDE_DIRS} )

add_library (http http.cpp)	
IF(WIN32)
  target_link_libraries(http ${Boost_LIBRARIES} ws2_32)
ELSE(WIN32)
  target_link_libraries(http ${Boost_LIBRARIES})
ENDIF(WIN32)